--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -33,6 +33,8 @@
   "SETTINGS_TOGGLE_WELCOME_MSG": "Log the welcome message",
   "SETTINGS_COOKIES": "This website uses cookies to save your navigation preferences",
 
+  "WARNING_UNSAVED": "Any unsaved changes will be lost. Continue?",
+
   "MEMORY": "Memory cells",
   "VARIABLES": "Variables",
 
