Clear log button

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -12,6 +12,7 @@
   "ISSUES": "Issues",
 
   "LOG": "Log",
+  "LOG_CLEAR": "Clear",
 
   "STATS": "Statistics",
   "STATS_EXECUTED_STEPS": "Executed steps",
