--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -12,6 +12,7 @@
   "ISSUES": "Problemas",
 
   "LOG": "Log",
+  "LOG_CLEAR": "Reajustar",
 
   "STATS": "Estadística",
   "STATS_EXECUTED_STEPS": "Pasos ejecutados",
