--- a/src/locale/it.json
+++ b/src/locale/it.json
@@ -12,6 +12,7 @@
   "ISSUES": "Segnalazioni",
 
   "LOG": "Log",
+  "LOG_CLEAR": "Azzera",
 
   "STATS": "Statistiche",
   "STATS_EXECUTED_STEPS": "Passi eseguiti",
