AngularJs ES6 Way

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -43,7 +43,7 @@
 
   "COMPILE": "Compile",
   "RUN": "Run loop",
-  "STEP": "Single cicle",
+  "STEP": "Single step",
   "PAUSE": "Pause",
   "STOP": "Stop",
 
