--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -69,7 +69,7 @@
 
   "GUIDE_INTRODUCTION_H": "Introduction",
   "GUIDE_INTRODUCTION_P1": "This simulator is meant to be a solution for students and teachers to study how a Von Neumann Machine works.",
-  "GUIDE_INTRODUCTION_P2": "Originally made in 2015 with pure HTML, CSS and JS, it has been rebuilt from the ground up and open-sourced on Github in 2016 using mainly Pug, Sass, AngularJS and CodeMirror.",
+  "GUIDE_INTRODUCTION_P2": "Originally made in 2015 with pure HTML, CSS and JS, it has been rebuilt from the ground up and open-sourced on GitHub in 2016 using mainly Pug, Sass, AngularJS and CodeMirror.",
   "GUIDE_SYNTAX_H": "Syntax",
   "GUIDE_SYNTAX_P": "This simulator is fully compatible with the most common commands for the Von Neumann Machine. It is able to load data (LOD), store it (STO), do additions (ADD), subtractions (SUB), multiplications (MUL), divisions (DIV) and perform jumps (JMZ/JMP). You can create comment lines using '//something' syntax.",
   "GUIDE_IO_H": "I/O features",
